--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,5 +34,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    example:
+    stage:
       materialized: view
+      schema: stg_nitesh_1
+    temp:
+      materialized: table
+      schema: tmp_nitesh_1
+    target:
+      materialized: incremental
+      schema: tgt_nitesh_1
