--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,6 +33,29 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   my_new_project:
-    # Applies to all files under models/example/
-    example:
+    raw_stage:
+      tags:
+        - 'raw'
       materialized: view
+      schema: raw_stg_nitesh
+    stage:
+      tags:
+        - 'stage'
+      enabled: true
+      materialized: view
+      schema: stg_nitesh
+    raw_vault:
+      tags:
+        - 'raw_vault'
+      materialized: incremental
+      schema: raw_vault_nitesh
+      hubs:
+        tags:
+          - 'hub'
+      links:
+        tags:
+          - 'link'
+      sats:
+        tags:
+          - 'satellite'
+          
